Fixed createChat bug. Fixed scrollbar bug.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,7 @@ body {
   height: 100vh;
   background: linear-gradient(to right, #84fab0, #8fd3f4);
   color: white;
+  overflow-y: hidden;
 }
 
 h1 {
